--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -329,10 +329,10 @@
 \backmatter
 \include{bibliography}
 
-\begingroup
-\hypersetup{hyperindex=true}
-\listofalgorithms
-\endgroup
+% \begingroup
+% \hypersetup{hyperindex=true}
+% \listofalgorithms
+% \endgroup
 
 
 
