--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -272,6 +272,19 @@
   langid = {german}
 }
 
+@article{bruce1995binary,
+  title = {On {{Binary Methods}}},
+  author = {Bruce, Kim and Cardelli, Luca and Castagna, Giuseppe and {The Hopkins Objects Group} and Leavens, Gary T. and Pierce, Benjamin},
+  date = {1995-01},
+  journaltitle = {Theory and Practice of Object Systems},
+  shortjournal = {Theory and Practice of Object Systems},
+  volume = {1},
+  pages = {221--242},
+  doi = {10.1002/j.1096-9942.1995.tb00019.x},
+  langid = {english},
+  number = {3}
+}
+
 @article{carpenter2015stan,
   title = {The {{Stan Math Library}}: {{Reverse}}-{{Mode Automatic Differentiation}} in {{C}}++},
   shorttitle = {The {{Stan Math Library}}},
@@ -1249,6 +1262,15 @@
   urldate = {2019-03-19},
   eventtitle = {{{IC Colloquium}}},
   venue = {{EPFL}}
+}
+
+@book{pierce2002types,
+  title = {Types and Programming Languages},
+  author = {Pierce, Benjamin C.},
+  date = {2002},
+  publisher = {{MIT Press}},
+  location = {{Cambridge, Mass}},
+  pagetotal = {623}
 }
 
 @inproceedings{plummer2003jags,
